projectCV. Mandiri Technology Sejahtera

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <link rel="stylesheet" href="./assets/styles/style.css" />
         <link rel="stylesheet" href="./assets/styles/footer.css" />
         <script src="./assets/js/counts.js"></script>
+
     </head>
     <body>
         <div class="template">
@@ -378,207 +379,206 @@
 
             <section class="section7-mz2">
                 <h1>OUR CUSTOMERS</h1>
-                <div class="container7-sponsor-mz2">
-                    <div class="sopnsor7-mz2">
-                        <img
-                            loading="lazy"
-                            id="suveryevor"
-                            src="./assets/images/suveryevor.jpeg"
-                            alt="sponsor"
-                        />
-                    </div>
-                    <div class="sopnsor7-mz2">
-                        <img
-                            loading="lazy"
-                            id="bri"
-                            src="./assets/images/briFinance.png"
-                            alt="sponsor"
-                        />
-                    </div>
-                    <div class="sopnsor7-mz2">
-                        <img
-                            loading="lazy"
-                            id="caplang"
-                            src="./assets/images/capLang.png"
-                            alt="sponsor"
-                        />
-                    </div>
-                    <div class="sopnsor7-mz2">
-                        <img
-                            loading="lazy"
-                            id="erajaya"
-                            src="./assets/images/erajaya.png"
-                            alt="sponsor"
-                        />
-                    </div>
-                    <div class="sopnsor7-mz2">
-                        <img
-                            loading="lazy"
-                            id="rentokil"
-                            src="./assets/images/rentokil.png"
-                            alt="sponsor"
-                        />
-                    </div>
-                    <div class="sopnsor7-mz2">
-                        <img
-                            loading="lazy"
-                            src="./assets/images/sadhana.png"
-                            alt="sponsor"
-                        />
-                    </div>
-                    <div class="sopnsor7-mz2">
-                        <img
-                            loading="lazy"
-                            id="petrochina"
-                            src="./assets/images/petrochina.jpeg"
-                            alt="sponsor"
-                        />
-                    </div>
-                    <div class="sopnsor7-mz2">
-                        <img
-                            loading="lazy"
-                            id="setiabudi"
-                            src="./assets/images/setiabudi.jpeg"
-                            alt="sponsor"
-                        />
-                    </div>
-
-                    <!-- New -->
-                    <div class="sopnsor7-mz2">
-                        <img
-                            loading="lazy"
-                            id="diskominfo"
-                            src="./assets/images/diskominfo.jpeg"
-                            alt="sponsor"
-                        />
-                    </div>
-                    <div class="sopnsor7-mz2">
-                        <img
-                            loading="lazy"
-                            id="cas"
-                            src="./assets/images/cas.png"
-                            alt="sponsor"
-                        />
-                    </div>
-                    <div class="sopnsor7-mz2">
-                        <img
-                            loading="lazy"
-                            id="trisakti"
-                            src="./assets/images/trisakti.png"
-                            alt="sponsor"
-                        />
-                    </div>
-                    <div class="sopnsor7-mz2">
-                        <img
-                            loading="lazy"
-                            id="mensa"
-                            src="./assets/images/mensa.svg"
-                            alt="sponsor"
-                        />
-                    </div>
-                    <div class="sopnsor7-mz2">
-                        <img
-                            loading="lazy"
-                            id="landison"
-                            src="./assets/images/landison.svg"
-                            alt="sponsor"
-                        />
-                    </div>
-                    <div class="sopnsor7-mz2">
-                        <img
-                            loading="lazy"
-                            id="otto"
-                            src="./assets/images/otto.svg"
-                            alt="sponsor"
-                        />
-                    </div>
-                    <div class="sopnsor7-mz2">
-                        <img
-                            loading="lazy"
-                            id="andini"
-                            src="./assets/images/andini.svg"
-                            alt="sponsor"
-                        />
-                    </div>
-                    <div class="sopnsor7-mz2">
-                        <img
-                            loading="lazy"
-                            id="akr"
-                            src="./assets/images/akr.svg"
-                            alt="sponsor"
-                        />
-                    </div>
-                    <div class="sopnsor7-mz2">
-                        <img
-                            loading="lazy"
-                            id="indocapital"
-                            src="./assets/images/indocapital.svg"
-                            alt="sponsor"
-                        />
-                    </div>
-                    <div class="sopnsor7-mz2">
-                        <img
-                            loading="lazy"
-                            id="tcl"
-                            src="./assets/images/tcl.svg"
-                            alt="sponsor"
-                        />
-                    </div>
-                    <div class="sopnsor7-mz2">
-                        <img
-                            loading="lazy"
-                            id="jhl"
-                            src="./assets/images/jhl.svg"
-                            alt="sponsor"
-                        />
-                    </div>
-                    <div class="sopnsor7-mz2">
-                        <img
-                            loading="lazy"
-                            id="ubm"
-                            src="./assets/images/ubm.svg"
-                            alt="sponsor"
-                        />
-                    </div>
-                    <div class="sopnsor7-mz2">
-                        <img
-                            loading="lazy"
-                            id="succor"
-                            src="./assets/images/succor.svg"
-                            alt="sponsor"
-                        />
-                    </div>
-                    <div class="sopnsor7-mz2">
-                        <img
-                            loading="lazy"
-                            id="planetBan"
-                            src="./assets/images/planetBan.png"
-                            alt="sponsor"
-                        />
-                    </div>
-                    <div class="sopnsor7-mz2">
-                        <img
-                            loading="lazy"
-                            id="smr"
-                            src="./assets/images/mr.svg"
-                            alt="sponsor"
-                        />
-                    </div>
-                    <div class="sopnsor7-mz2">
-                        <img
-                            loading="lazy"
-                            id="rukun"
-                            src="./assets/images/rukun.svg"
-                            alt="sponsor"
-                        />
-                    </div>
-                    <div class="sopnsor7-mz2">
-                        <img
-                            loading="lazy"
-                            id="gmf"
-                            src="./assets/images/gmf.svg"
-                            alt="sponsor"
-                        />
+                <div class="slider-container">
+                    <div class="slider">
+                            <img
+                                loading="lazy"
+                                id="diskominfo"
+                                src="./assets/images/diskominfo.jpeg"
+                                alt="sponsor"
+                            />
+                            <img
+                                loading="lazy"
+                                id="trisakti"
+                                src="./assets/images/trisakti.png"
+                                alt="sponsor"
+                            />
+                            <img
+                                loading="lazy"
+                                id="mensa"
+                                src="./assets/images/mensa.svg"
+                                alt="sponsor"
+                            />
+                            <img
+                                loading="lazy"
+                                id="landison"
+                                src="./assets/images/landison.svg"
+                                alt="sponsor"
+                            />
+                            <img
+                                loading="lazy"
+                                id="otto"
+                                src="./assets/images/otto.svg"
+                                alt="sponsor"
+                            />
+                            <img
+                                loading="lazy"
+                                id="andini"
+                                src="./assets/images/andini.svg"
+                                alt="sponsor"
+                            />
+                            <img
+                                loading="lazy"
+                                id="akr"
+                                src="./assets/images/akr.svg"
+                                alt="sponsor"
+                            />
+                            <img
+                                loading="lazy"
+                                id="indocapital"
+                                src="./assets/images/indocapital.svg"
+                                alt="sponsor"
+                            />
+                            <img
+                                loading="lazy"
+                                id="tcl"
+                                src="./assets/images/tcl.svg"
+                                alt="sponsor"
+                            />
+                            <img
+                                loading="lazy"
+                                id="jhl"
+                                src="./assets/images/jhl.svg"
+                                alt="sponsor"
+                            />
+                            <img
+                                loading="lazy"
+                                id="ubm"
+                                src="./assets/images/ubm.svg"
+                                alt="sponsor"
+                            />
+                            <img
+                                loading="lazy"
+                                id="succor"
+                                src="./assets/images/succor.svg"
+                                alt="sponsor"
+                            />
+                            <img
+                                loading="lazy"
+                                id="planetBan"
+                                src="./assets/images/planetBan.png"
+                                alt="sponsor"
+                            />
+                            <img
+                                loading="lazy"
+                                id="smr"
+                                src="./assets/images/mr.svg"
+                                alt="sponsor"
+                            />
+                            <img
+                                loading="lazy"
+                                id="rukun"
+                                src="./assets/images/rukun.svg"
+                                alt="sponsor"
+                            />
+                            <img
+                                loading="lazy"
+                                id="gmf"
+                                src="./assets/images/gmf.svg"
+                                alt="sponsor"
+                            />
+                            <img
+                                loading="lazy"
+                                id="diskominfo"
+                                src="./assets/images/diskominfo.jpeg"
+                                alt="sponsor"
+                            />
+                            <img
+                                loading="lazy"
+                                id="trisakti"
+                                src="./assets/images/trisakti.png"
+                                alt="sponsor"
+                            />
+                            <img
+                                loading="lazy"
+                                id="mensa"
+                                src="./assets/images/mensa.svg"
+                                alt="sponsor"
+                            />
+                            <img
+                                loading="lazy"
+                                id="landison"
+                                src="./assets/images/landison.svg"
+                                alt="sponsor"
+                            />
+                            <img
+                                loading="lazy"
+                                id="otto"
+                                src="./assets/images/otto.svg"
+                                alt="sponsor"
+                            />
+                            <img
+                                loading="lazy"
+                                id="andini"
+                                src="./assets/images/andini.svg"
+                                alt="sponsor"
+                            />
+                            <img
+                                loading="lazy"
+                                id="akr"
+                                src="./assets/images/akr.svg"
+                                alt="sponsor"
+                            />
+                            <img
+                                loading="lazy"
+                                id="indocapital"
+                                src="./assets/images/indocapital.svg"
+                                alt="sponsor"
+                            />
+                            <img
+                                loading="lazy"
+                                id="tcl"
+                                src="./assets/images/tcl.svg"
+                                alt="sponsor"
+                            />
+                            <img
+                                loading="lazy"
+                                id="jhl"
+                                src="./assets/images/jhl.svg"
+                                alt="sponsor"
+                            />
+                            <img
+                                loading="lazy"
+                                id="ubm"
+                                src="./assets/images/ubm.svg"
+                                alt="sponsor"
+                            />
+                            <img
+                                loading="lazy"
+                                id="cas"
+                                src="./assets/images/cas.png"
+                                alt="sponsor"
+                            />
+                            <img
+                                loading="lazy"
+                                id="succor"
+                                src="./assets/images/succor.svg"
+                                alt="sponsor"
+                            />
+                            <img
+                                loading="lazy"
+                                id="planetBan"
+                                src="./assets/images/planetBan.png"
+                                alt="sponsor"
+                            />
+                            <img
+                                loading="lazy"
+                                id="smr"
+                                src="./assets/images/mr.svg"
+                                alt="sponsor"
+                            />
+                            <img
+                                loading="lazy"
+                                id="rukun"
+                                src="./assets/images/rukun.svg"
+                                alt="sponsor"
+                            />
+                            <img
+                                loading="lazy"
+                                id="gmf"
+                                src="./assets/images/gmf.svg"
+                                alt="sponsor"
+                            />
                     </div>
                 </div>
             </section>
@@ -667,6 +667,7 @@
                 </div>
             </a>
 
+        <script src="./assets/js/slider.js"></script>
         <script>
             var i, acc = document.querySelectorAll("accordion-mz2");
             for (i = 0; i < acc.length; i++) acc[i].addEventListener("click", function() {
