projectCV. Mandiri Technology Sejahtera

--- a/detail-product.html
+++ b/detail-product.html
@@ -23,7 +23,7 @@
         <meta name="twitter:image" content="https://raw.githubusercontent.com/khoirulhudaa/MTS/main/assets/images/logoIcon.png">
 
         <!-- Meta Tags Generated via https://www.opengraph.xyz -->
-                
+        <link rel="icon" href="./assets/favicon/favicon.ico" type="image/x-icon"> 
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
         <link rel="stylesheet" href="./assets/styles/navbar.css" />
