--- a/brand.html
+++ b/brand.html
@@ -49,7 +49,7 @@
         />
 
         <!-- Meta Tags Generated via https://www.opengraph.xyz -->
-
+        <link rel="icon" href="./assets/favicon/favicon.ico" type="image/x-icon"> 
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
         <link rel="stylesheet" href="./assets/styles/navbar.css" />
