--- a/category.html
+++ b/category.html
@@ -134,7 +134,7 @@
                             <a href="./products.html">
                                 <div class="card-top-exp">
                                     <img
-                                        src="./assets/images/nike.png"
+                                        src="./assets/images/nike2.png"
                                         alt="card-image"
                                     />
                                 </div>
@@ -149,7 +149,7 @@
                             <a href="./products.html">
                                 <div class="card-top-exp">
                                     <img
-                                        src="./assets/images/nike.png"
+                                        src="./assets/images/nike2.png"
                                         alt="card-image"
                                     />
                                 </div>
@@ -164,7 +164,7 @@
                             <a href="./products.html">
                                 <div class="card-top-exp">
                                     <img
-                                        src="./assets/images/nike.png"
+                                        src="./assets/images/nike2.png"
                                         alt="card-image"
                                     />
                                 </div>
@@ -179,7 +179,7 @@
                             <a href="./products.html">
                                 <div class="card-top-exp">
                                     <img
-                                        src="./assets/images/nike.png"
+                                        src="./assets/images/nike2.png"
                                         alt="card-image"
                                     />
                                 </div>
@@ -194,7 +194,7 @@
                             <a href="./products.html">
                                 <div class="card-top-exp">
                                     <img
-                                        src="./assets/images/nike.png"
+                                        src="./assets/images/nike2.png"
                                         alt="card-image"
                                     />
                                 </div>
@@ -209,7 +209,7 @@
                             <a href="./products.html">
                                 <div class="card-top-exp">
                                     <img
-                                        src="./assets/images/nike.png"
+                                        src="./assets/images/nike2.png"
                                         alt="card-image"
                                     />
                                 </div>
@@ -224,7 +224,7 @@
                             <a href="./products.html">
                                 <div class="card-top-exp">
                                     <img
-                                        src="./assets/images/nike.png"
+                                        src="./assets/images/nike2.png"
                                         alt="card-image"
                                     />
                                 </div>
@@ -239,7 +239,7 @@
                             <a href="./products.html">
                                 <div class="card-top-exp">
                                     <img
-                                        src="./assets/images/nike.png"
+                                        src="./assets/images/nike2.png"
                                         alt="card-image"
                                     />
                                 </div>
