projectCV. Mandiri Technology Sejahtera

--- a/index.html
+++ b/index.html
@@ -119,8 +119,10 @@
                     support, remote assistance, and phone support. The company
                     combines technical expertise with strong customer service.
                 </p>
-                <div>
-                    <p class="brand-testi-mz1">MTS</p>
+                <div class="legend">
+                    <div></div>
+                    <p>MTS</p>
+                    <div></div>
                 </div>
             </div>
 
