projectCV. Mandiri Technology Sejahtera

--- a/category.html
+++ b/category.html
@@ -118,7 +118,9 @@
                     Herox helps businesses in Africa get paid by anyone,
                     anywhere in the world securedly.
                 </p>
-                <button class="section4-btn-section4mz4">Exploration</button>
+                <a href="#categories">
+                    <button class="section4-btn-section4mz4">Exploration</button>
+                </a>
             </div>
 
             <div class="container-exp" id="categories">
