--- a/products.html
+++ b/products.html
@@ -97,12 +97,12 @@
                     </div>
                 </div>
 
-                <div class="wrapper-list-products-block" id="list-product">
-                    <div class="child-product-block">
-                        <div class="child-product-left-block">
+                <div class="wrapper-list-products" id="list-product">
+                    <div class="child-product">
+                        <div class="child-product-left">
                             <img loading="lazy" src="./assets/images/kamera.jpeg" alt="image-product">
                         </div>
-                        <div class="child-product-right-block">
+                        <div class="child-product-right">
                             <h4>Canon Camera EOS 2022, Black 10x Zoom</h3>
                             <h1>$100</h1>
                             <small>CANON</small>
@@ -115,11 +115,11 @@
                             </a>
                         </div>
                     </div>
-                    <div class="child-product-block">
-                        <div class="child-product-left-block">
+                    <div class="child-product">
+                        <div class="child-product-left">
                             <img loading="lazy" src="./assets/images/kamera.jpeg" alt="image-product">
                         </div>
-                        <div class="child-product-right-block">
+                        <div class="child-product-right">
                             <h4>Canon Camera EOS 2022, Black 10x Zoom</h3>
                             <h1>$100</h1>
                             <small>CANON</small>
@@ -132,11 +132,11 @@
                             </a>
                         </div>
                     </div>
-                    <div class="child-product-block">
-                        <div class="child-product-left-block">
+                    <div class="child-product">
+                        <div class="child-product-left">
                             <img loading="lazy" src="./assets/images/kamera.jpeg" alt="image-product">
                         </div>
-                        <div class="child-product-right-block">
+                        <div class="child-product-right">
                             <h4>Canon Camera EOS 2022, Black 10x Zoom</h3>
                             <h1>$100</h1>
                             <small>CANON</small>
@@ -149,11 +149,11 @@
                             </a>
                         </div>
                     </div>
-                    <div class="child-product-block">
-                        <div class="child-product-left-block">
+                    <div class="child-product">
+                        <div class="child-product-left">
                             <img loading="lazy" src="./assets/images/kamera.jpeg" alt="image-product">
                         </div>
-                        <div class="child-product-right-block">
+                        <div class="child-product-right">
                             <h4>Canon Camera EOS 2022, Black 10x Zoom</h3>
                             <h1>$100</h1>
                             <small>CANON</small>
