--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     >
                         <img
                             loading="lazy"
-                            src="./assets/images/heroes.jpg"
+                            src="./assets/images/heroes.webp"
                             class="bgnewhero"
                             alt="https://unsplash.com/s/photos/meet?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText"
                         />
@@ -395,199 +395,199 @@
                             <img
                                 loading="lazy"
                                 id="diskominfo"
-                                src="./assets/images/diskominfo.jpeg"
+                                src="./assets/images/diskominfo.webp"
                                 alt="sponsor"
                             />
                             <img
                                 loading="lazy"
                                 id="trisakti"
-                                src="./assets/images/trisakti.png"
+                                src="./assets/images/trisakti.webp"
                                 alt="sponsor"
                             />
                             <img
                                 loading="lazy"
                                 id="mensa"
-                                src="./assets/images/mensa.svg"
+                                src="./assets/images/mensa.webp"
                                 alt="sponsor"
                             />
                             <img
                                 loading="lazy"
                                 id="landison"
-                                src="./assets/images/landison.svg"
+                                src="./assets/images/landison.webp"
                                 alt="sponsor"
                             />
                             <img
                                 loading="lazy"
                                 id="otto"
-                                src="./assets/images/otto.svg"
+                                src="./assets/images/otto.webp"
                                 alt="sponsor"
                             />
                             <img
                                 loading="lazy"
                                 id="andini"
-                                src="./assets/images/andini.svg"
+                                src="./assets/images/andini.webp"
                                 alt="sponsor"
                             />
                             <img
                                 loading="lazy"
                                 id="akr"
-                                src="./assets/images/akr.svg"
+                                src="./assets/images/akr.webp"
                                 alt="sponsor"
                             />
                             <img
                                 loading="lazy"
                                 id="indocapital"
-                                src="./assets/images/indocapital.svg"
+                                src="./assets/images/indocapital.webp"
                                 alt="sponsor"
                             />
                             <img
                                 loading="lazy"
                                 id="tcl"
-                                src="./assets/images/tcl.svg"
+                                src="./assets/images/tcl.webp"
                                 alt="sponsor"
                             />
                             <img
                                 loading="lazy"
                                 id="jhl"
-                                src="./assets/images/jhl.svg"
+                                src="./assets/images/jhl.webp"
                                 alt="sponsor"
                             />
                             <img
                                 loading="lazy"
                                 id="ubm"
-                                src="./assets/images/ubm.svg"
+                                src="./assets/images/ubm.webp"
                                 alt="sponsor"
                             />
                             <img
                                 loading="lazy"
                                 id="succor"
-                                src="./assets/images/succor.svg"
+                                src="./assets/images/succor.webp"
                                 alt="sponsor"
                             />
                             <img
                                 loading="lazy"
                                 id="planetBan"
-                                src="./assets/images/planetBan.png"
+                                src="./assets/images/planetBan.webp"
                                 alt="sponsor"
                             />
                             <img
                                 loading="lazy"
                                 id="smr"
-                                src="./assets/images/mr.svg"
+                                src="./assets/images/mr.webp"
                                 alt="sponsor"
                             />
                             <img
                                 loading="lazy"
                                 id="rukun"
-                                src="./assets/images/rukun.svg"
+                                src="./assets/images/rukun.webp"
                                 alt="sponsor"
                             />
                             <img
                                 loading="lazy"
                                 id="gmf"
-                                src="./assets/images/gmf.svg"
+                                src="./assets/images/gmf.webp"
                                 alt="sponsor"
                             />
                             <img
                                 loading="lazy"
                                 id="diskominfo"
-                                src="./assets/images/diskominfo.jpeg"
+                                src="./assets/images/diskominfo.webp"
                                 alt="sponsor"
                             />
                             <img
                                 loading="lazy"
                                 id="trisakti"
-                                src="./assets/images/trisakti.png"
+                                src="./assets/images/trisakti.webp"
                                 alt="sponsor"
                             />
                             <img
                                 loading="lazy"
                                 id="mensa"
-                                src="./assets/images/mensa.svg"
+                                src="./assets/images/mensa.webp"
                                 alt="sponsor"
                             />
                             <img
                                 loading="lazy"
                                 id="landison"
-                                src="./assets/images/landison.svg"
+                                src="./assets/images/landison.webp"
                                 alt="sponsor"
                             />
                             <img
                                 loading="lazy"
                                 id="otto"
-                                src="./assets/images/otto.svg"
+                                src="./assets/images/otto.webp"
                                 alt="sponsor"
                             />
                             <img
                                 loading="lazy"
                                 id="andini"
-                                src="./assets/images/andini.svg"
+                                src="./assets/images/andini.webp"
                                 alt="sponsor"
                             />
                             <img
                                 loading="lazy"
                                 id="akr"
-                                src="./assets/images/akr.svg"
+                                src="./assets/images/akr.webp"
                                 alt="sponsor"
                             />
                             <img
                                 loading="lazy"
                                 id="indocapital"
-                                src="./assets/images/indocapital.svg"
+                                src="./assets/images/indocapital.webp"
                                 alt="sponsor"
                             />
                             <img
                                 loading="lazy"
                                 id="tcl"
-                                src="./assets/images/tcl.svg"
+                                src="./assets/images/tcl.webp"
                                 alt="sponsor"
                             />
                             <img
                                 loading="lazy"
                                 id="jhl"
-                                src="./assets/images/jhl.svg"
+                                src="./assets/images/jhl.webp"
                                 alt="sponsor"
                             />
                             <img
                                 loading="lazy"
                                 id="ubm"
-                                src="./assets/images/ubm.svg"
+                                src="./assets/images/ubm.webp"
                                 alt="sponsor"
                             />
                             <img
                                 loading="lazy"
                                 id="cas"
-                                src="./assets/images/cas.png"
+                                src="./assets/images/cas.webp"
                                 alt="sponsor"
                             />
                             <img
                                 loading="lazy"
                                 id="succor"
-                                src="./assets/images/succor.svg"
+                                src="./assets/images/succor.webp"
                                 alt="sponsor"
                             />
                             <img
                                 loading="lazy"
                                 id="planetBan"
-                                src="./assets/images/planetBan.png"
+                                src="./assets/images/planetBan.webp"
                                 alt="sponsor"
                             />
                             <img
                                 loading="lazy"
                                 id="smr"
-                                src="./assets/images/mr.svg"
+                                src="./assets/images/mr.webp"
                                 alt="sponsor"
                             />
                             <img
                                 loading="lazy"
                                 id="rukun"
-                                src="./assets/images/rukun.svg"
+                                src="./assets/images/rukun.webp"
                                 alt="sponsor"
                             />
                             <img
                                 loading="lazy"
                                 id="gmf"
-                                src="./assets/images/gmf.svg"
+                                src="./assets/images/gmf.webp"
                                 alt="sponsor"
                             />
                     </div>
