projectCV. Mandiri Technology Sejahtera

--- a/brand.html
+++ b/brand.html
@@ -86,7 +86,7 @@
                 <div class="logo-navbar5-mz5">
                     <img
                         loading="lazy"
-                        src="./assets/images/logo.jpg"
+                        src="./assets/imageslogoMTS.png"
                         alt="logo"
                         id="logo"
                     />
