--- a/detail-product.html
+++ b/detail-product.html
@@ -55,7 +55,7 @@
                 <div class="logo-navbar5-mz5">
                     <img
                         loading="lazy"
-                        src="./assets/images/logo.jpg"
+                        src="./assets/images/logoMTS.png"
                         alt="logo"
                         id="logo"
                     />
