--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <div class="logo-navbar5-mz5">
                     <img
                         loading="lazy"
-                        src="./assets/images/logo.jpg"
+                        src="./assets/images/logoMTS.png"
                         alt="logo"
                         id="logo"
                     />
